[project]
name = "comfyui-hollow-preserve"
description = "A ComfyUI node that breaks closed loops in masks to prevent inpainting models from modifying enclosed regions"
version = "0.1.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/krmahil/comfyui-hollow-preserve"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mahilkr"
DisplayName = "Hollow Preserve"
Icon = "https://github.com/krmahil/comfyui-hollow-preserve/blob/main/examples/ComfyUI_00005_.png" 
